# hyprlang

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  flake.nix  hyprlang-docs  hyprlang.pc.in
.github/workflows/: arch.yml  nix.yml
include/: hyprlang.hpp
nix/: default.nix  overlays.nix
src/: common.cpp  config.cpp  config.hpp  logger.hpp  public.hpp
tests/: main.cpp
tests/config/: colors.conf  config.conf  error.conf  error2.conf  invalid-numbers.conf  multiline-errors.conf
tests/fuzz/: main.cpp
tests/parse/: main.cpp
